--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.3.2",
     "browserslist": "^4.17.6",
+    "classnames": "^2.3.1",
     "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
